<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".locations.LocationsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="16dp"
        style="@style/BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tvAddPlaceTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_for_city"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearch"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddPlaceTitle"
            android:hint="@string/search"
            app:startIconDrawable="@drawable/ic_location">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="16dp"
            android:id="@+id/rvSearchPlaces"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilSearch"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:orientation="vertical"
            tools:itemCount="4"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/item_location" />

        <TextView
            android:id="@+id/tvEmptyLocations"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorOnPrimaryLight"
            android:gravity="center"
            android:text="@string/no_places_to_show"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilSearch"
            tools:layout_editor_absoluteX="16dp"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>