<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.Group
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/homeViewsGroup"
        app:constraint_referenced_ids="
        temperature_text_view,
        weather_image_view,
        pressure_label_text_view,
        pressure_text_view,
        humidity_label_text_view,
        humidity_text_view,
        wind_speed_label_text_view,
        wind_speed_text_view,
        date_time_text_view"/>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cities_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="52sp"
        tools:text="San Francisco" />

    <!-- Temperature -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/temperature_text_view"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xl_horizontal_spacing"
        android:layout_marginTop="@dimen/m_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="@id/weather_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/weather_image_view" />

    <ImageView
        android:id="@+id/weather_image_view"
        android:layout_width="@dimen/weather_image_view_width"
        android:layout_height="@dimen/weather_image_view_height"
        android:layout_marginTop="@dimen/m_vertical_spacing"
        android:layout_marginEnd="@dimen/m_horizontal_spacing"
        android:src="@mipmap/clouds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cities_name" />

    <!-- Pressure Label -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pressure_label_text_view"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_horizontal_spacing"
        android:layout_marginTop="@dimen/m_vertical_spacing"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_image_view" />

    <!-- Humidity Label -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/humidity_label_text_view"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pressure_label_text_view" />

    <!-- Wind Speed Label -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wind_speed_label_text_view"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/m_horizontal_spacing"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/pressure_label_text_view" />

    <!-- Pressure -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pressure_text_view"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_vertical_spacing"
        app:layout_constraintEnd_toEndOf="@id/pressure_label_text_view"
        app:layout_constraintStart_toStartOf="@id/pressure_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/pressure_label_text_view"
        tools:text="1,1090 hPa" />

    <!-- Humidity -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/humidity_text_view"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_vertical_spacing"
        app:layout_constraintEnd_toEndOf="@id/humidity_label_text_view"
        app:layout_constraintStart_toStartOf="@id/humidity_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/humidity_label_text_view"
        tools:text="26%" />

    <!-- Pressure -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wind_speed_text_view"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_vertical_spacing"
        app:layout_constraintEnd_toEndOf="@id/wind_speed_label_text_view"
        app:layout_constraintStart_toStartOf="@id/wind_speed_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/wind_speed_label_text_view"
        tools:text="1.5 m/s" />


    <!-- DateTime -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_time_text_view"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_horizontal_spacing"
        android:layout_marginEnd="@dimen/m_horizontal_spacing"
        android:layout_marginBottom="@dimen/m_vertical_spacing"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="July 21, 2020" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>